# langgraph-customer-support-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  CUSTOM_EVALUATORS_README.md  DEVELOPER_SETUP.md  Dockerfile  EVALUATION_SUMMARY.md  EVAL_SUCCESS.md  EXAMPLE_LANGSMITH_OUTPUT.md  FILES_CREATED.md  LANGSMITH_EVAL_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_EVAL.md  README.md  START_HERE.md  STRUCTURE.txt  TROUBLESHOOTING.md  VECTOR_STORE_SETUP.md  check_langsmith_setup.py  design_method.md  docker-compose.yml  langgraph.json  langsmith_traces_and_evals.txt  pyproject.toml  requirements.txt  run_eval.sh  tests.txt
data/: knowledge_base.json
notebooks/: customer_support_bot_demo.ipynb  graph_visualization.ipynb  quickstart_notebook.ipynb
scripts/: api_client_example.py  check_langsmith_setup.py  cli.py  init-ollama.sh  init_vector_store.py  run_eval.sh  run_tests.sh  test_bot.py  test_graph_viz.py  visualize_graph.py
src/support_agent/: __init__.py  agent.py  prompts.py  state.py  tools.py  vector_store.py
src/support_agent/tests/: CUSTOM_EVALUATORS_GUIDE.md  LANGSMITH_EVAL_GUIDE.md  QUICKSTART.md  README.md  __init__.py  conftest.py  custom_evaluators.py  eval_langsmith.py  test_agent.py  test_state.py  test_tools.py
